Included text wrap in description, fixed head for common use across pages. Minor style changes.

--- a/src/main/webapp/resources/assets/css/main_decorator.css
+++ b/src/main/webapp/resources/assets/css/main_decorator.css
@@ -526,7 +526,17 @@ div.offerCompanyInTitle {
     color: #828282 !important;
 }
 
+pre.parsed-text{
+    white-space: pre-wrap;       /* Since CSS 2.1 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;
+    word-break: break-word !important;
+    text-align: justify;
+}
+
 .offerImageAndFeedback {
+    max-width: 200px;
     width: 30%;
     margin: 0 3em 0 0;
 }
@@ -540,7 +550,6 @@ div.offerCompanyInTitle {
 @media screen and (max-width: 736px) and (orientation: portrait) {
     .offerImageAndFeedback {
         width: 100%;
-        max-width: 52%;
         margin: 0 0 2em 0 !important;
     }
 
@@ -941,6 +950,7 @@ pre.parsed-text {
     font: inherit;
     overflow: hidden;
     white-space: pre-wrap;
+    max-height: 200px;
 }
 
 pre.parsed-text.list {
