--- a/src/main/webapp/resources/js/offer/offer-specifications/offerSpecifications.css
+++ b/src/main/webapp/resources/js/offer/offer-specifications/offerSpecifications.css
@@ -224,7 +224,7 @@ div.commentsTheComment {
     border-radius: 1em;*/
     background-color: rgba(0, 0, 0, 0.3);
     min-height: 3em;
-    padding: .5em 0 .5em 1em;
+    padding: .5em 1em .5em 1em;
     margin-left: 3em;
 }
 
